[package]
name = "xmas-mapper"
version = "0.1.0"
edition = "2018"
authors = ["David Lenfesty <lenfesty@ualberta.ca>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
macroquad = "0.3"
rand = "0.8"
rand_distr = "0.4"
itertools = "0.10"
